<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/holo_blue_light">

    <TextView
        style="@style/LoginTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:id="@+id/tv_login_title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:id="@+id/rel1"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tv_login_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="1">

        <EditText
            style="@style/LoginEditTextStyle"
            android:hint="@string/login_phone_hint"
            android:id="@+id/et_login_phone"
            android:inputType="text|phone"/>

        <EditText
            style="@style/LoginEditTextStyle"
            android:hint="@string/login_password_hint"
            android:id="@+id/et_login_password"
            android:inputType="textPassword"
            android:layout_below="@+id/et_login_phone"/>

        <Button
            style="@style/LoginButtonStyle"
            android:text="@string/login_button"
            android:id="@+id/b_login"
            android:layout_width="wrap_content"
            android:layout_below="@+id/et_login_password"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="1">

        <Button
            style="@style/LoginHelperButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:id="@+id/b_new_account"/>

        <Button
            style="@style/LoginHelperButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_button"
            android:id="@+id/b_login_forgot"/>
    </LinearLayout>

</RelativeLayout>